去除无用字段，TomatoClock新增userId字段 用于方便查询数据